Always use Left-To-Right as the "document layout" in the terminal area

REVIEW:102976
BUG:279048
FIXED-IN:4.8